# HidraVFX

./: .gitignore  CMakeLists.txt  README
src/: CMakeLists.txt  blending.c  blending.h  codegen.pl  color.c  color.h  colorfx.c  colorfx.h  colorfx.inc  conform.c  conform.h  convolution.c  convolution.h  effect.h  effects.pl  hidra.h  interpol.h  layer.c  layer.h  main.c  mathplus.h  options.c  options.h  png.c  png.h  pnm.c  pnm.h  set.c  set.h
test/: test.pl  test.sh
