CMAKE_MINIMUM_REQUIRED(VERSION 2.6)
PROJECT(hidravfx C)
SET(MAJOR_VERSION 0)
SET(MINOR_VERSION 3)
SET(PATCH_LEVEL 0)
INCLUDE_DIRECTORIES(src)
ADD_DEFINITIONS("-g -Wall -ansi -pedantic -std=c99")
ADD_SUBDIRECTORY(src bin)

SET(CPACK_SET_DESTDIR "on")
SET(CPACK_PACKAGING_INSTALL_PREFIX "/tmp")
SET(CPACK_GENERATOR "DEB")
SET(CPACK_PACKAGE_DESCRIPTION "High dynamic range visual effect library and command line application.")
SET(CPACK_PACKAGE_DESCRIPTION_SUMMARY "HidraVFX is a High dynamic range visual effect library and command line application.")
SET(CPACK_PACKAGE_VENDOR "Hidra Team")
SET(CPACK_PACKAGE_CONTACT "Laszlo Simon <laszlo.simon@gmail.com>")
SET(CPACK_PACKAGE_VERSION_MAJOR "${MAJOR_VERSION}")
SET(CPACK_PACKAGE_VERSION_MINOR "${MINOR_VERSION}")
SET(CPACK_PACKAGE_VERSION_PATCH "${PATCH_LEVEL}")
SET(CPACK_PACKAGE_FILE_NAME "${CMAKE_PROJECT_NAME}_${MAJOR_VERSION}.${MINOR_VERSION}.${PATCH_LEVEL}")
SET(CPACK_SOURCE_PACKAGE_FILE_NAME "${CMAKE_PROJECT_NAME}_${MAJOR_VERSION}.${MINOR_VERSION}.${CPACK_PACKAGE_VERSION_PATCH}")
SET(CPACK_DEBIAN_PACKAGE_DEPENDS "libc6 (>= 2.1.3), libgcc1 (>= 1:4.1.1)")
SET(CPACK_DEBIAN_PACKAGE_PRIORITY "optional")
SET(CPACK_DEBIAN_PACKAGE_SECTION "Graphics")
SET(CPACK_DEBIAN_ARCHITECTURE ${CMAKE_SYSTEM_PROCESSOR})
SET(CPACK_COMPONENTS_ALL Libraries ApplicationData)
INCLUDE(CPack)
